<?xml version="1.0"?>
<package>
  <name>datamatrix_control</name>
  <version>0.0.0</version>
  <description>The datamatrix_control package</description>
  <maintainer email="pulidofentanes@gmail.com">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_social</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>strands_tweets</build_depend>
  <build_depend>fake_camera_effects</build_depend>
  <build_depend>strands_webserver</build_depend>


  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>strands_tweets</run_depend>
  <run_depend>fake_camera_effects</run_depend>
  <run_depend>strands_webserver</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
